<resources>
    <string name="app_name">Daiict-timetable</string>
    <string name="action_sign_in">Sign In</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="registration_button">New To DA-IICT?</string>
    <string name="prompt_student_id">Student Id</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="title_activity_admin_home">Admin Home</string>


    <string name="student_id_registration">Student Id</string>
    <string name="reset_text">Reset</string>

    <string name="new_timetable_btn">New TimeTable</string>
    <string name="subject_new_timetable_edit">Subject</string>
    <string name="timings_new_timetable_edit">Timings</string>
    <string name="submit_btn">Submit</string>
    <string name="Cancel_btn">Cancel</string>


    <string-array name="Program">
        <item>MSC-IT</item>
        <item>M.Tech</item>
    </string-array>

    <string-array name="Type">
        <item>Faculty</item>
        <item>Admin</item>
        <item>Student</item>
    </string-array>
    <string-array name="Year_mtech">
        <item>First Year</item>
        <item>Second Year</item>
        <item>Third Year</item>
    </string-array>
    <string-array name="Year_mscit">
        <item>First Year</item>
        <item>Second Year</item>
    </string-array>
    <string-array name="day">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Firday</item>
    </string-array>
</resources>
